[package]
name = "uncensorable-cred"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cwt_prove"
path = "src/main.rs"

[[bin]]
name = "cwt_notary"
path = "src/bin/cwt_notary.rs"

[dependencies]
vole_zk = { path = "vole_zk_prover", package = "volonym" }
blind-rsa-signatures = { path = "rust-blind-rsa-signatures", package = "blind-rsa-signatures" }
bincode = "1.3"
memory-stats = "1.2"
rand = "0.8.5"
num-bigint-dig = "0.8.4"
serde_json = "1.0"
